[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tile_sets/TestBox.tres" type="TileSet" id=2]
[ext_resource path="res://scripts/LiquidSimulationSpawner.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/walls/variation_1/3.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/walls/variation_1/1.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/walls/variation_1/2.png" type="Texture" id=6]
[ext_resource path="res://liquidsim/liquidsim.gdns" type="Script" id=7]
[ext_resource path="res://assets/textures/normal_maps/walls/variation_1/normal_map_2.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/normal_maps/walls/variation_1/normal_map_3.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/normal_maps/walls/variation_1/normal_map_1.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/foreground_decor/vines.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/foreground_decor/bars.png" type="Texture" id=12]
[ext_resource path="res://assets/textures/walls/variation_1/4.png" type="Texture" id=13]
[ext_resource path="res://assets/textures/walls/variation_1/sewer-pipe.png" type="Texture" id=14]
[ext_resource path="res://assets/textures/normal_maps/walls/variation_1/normal_map_4.png" type="Texture" id=15]

[node name="TextBox" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
collision_layer = 2
collision_mask = 13
format = 1
tile_data = PoolIntArray( 262143, 4, 0, 196617, 4, 0, 327679, 4, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 4, 0 )
script = ExtResource( 3 )
WATER_SPAWN = NodePath("../SewerPipes/WaterSpawn")

[node name="LiquidSim" type="Node" parent="TileMap"]
script = ExtResource( 7 )

[node name="Walls" type="Node2D" parent="."]

[node name="corner1" type="Sprite" parent="Walls"]
position = Vector2( 544, 224 )
texture = ExtResource( 6 )
normal_map = ExtResource( 8 )

[node name="corner2" type="Sprite" parent="Walls"]
position = Vector2( 32, 224 )
texture = ExtResource( 5 )
normal_map = ExtResource( 10 )

[node name="straightWall" type="Sprite" parent="Walls"]
position = Vector2( 160, 224 )
texture = ExtResource( 4 )
normal_map = ExtResource( 9 )

[node name="straightWall2" type="Sprite" parent="Walls"]
position = Vector2( 224, 224 )
texture = ExtResource( 4 )
normal_map = ExtResource( 9 )

[node name="straightWall3" type="Sprite" parent="Walls"]
position = Vector2( 288, 224 )
texture = ExtResource( 4 )
normal_map = ExtResource( 9 )

[node name="straightWall4" type="Sprite" parent="Walls"]
position = Vector2( 416, 224 )
texture = ExtResource( 4 )
normal_map = ExtResource( 9 )

[node name="straightWall5" type="Sprite" parent="Walls"]
position = Vector2( 352, 224 )
texture = ExtResource( 13 )
normal_map = ExtResource( 15 )

[node name="straightWall7" type="Sprite" parent="Walls"]
position = Vector2( 480, 224 )
texture = ExtResource( 4 )
normal_map = ExtResource( 9 )

[node name="straightWall8" type="Sprite" parent="Walls"]
position = Vector2( 96, 224 )
texture = ExtResource( 4 )
normal_map = ExtResource( 9 )

[node name="SewerPipes" type="Node2D" parent="."]

[node name="SewerPipeShadow" type="Sprite" parent="SewerPipes"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 359, 222 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 14 )

[node name="SewerPipe" type="Sprite" parent="SewerPipes"]
modulate = Color( 0.631373, 0.631373, 0.631373, 1 )
position = Vector2( 359, 226 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 14 )

[node name="IfVisible" type="VisibilityNotifier2D" parent="SewerPipes/SewerPipe"]
position = Vector2( -3.05176e-05, -6.10352e-05 )
scale = Vector2( 0.25, 0.25 )

[node name="WaterSpawn" type="Position2D" parent="SewerPipes"]
position = Vector2( 359, 226 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 21, 245 )
collision_mask = 2

[node name="WaterPositions" type="Node" parent="."]

[node name="Position1" type="Position2D" parent="WaterPositions" groups=[
"WaterPosition",
]]
position = Vector2( 303, 166 )

[node name="DarkenLayer" type="CanvasModulate" parent="."]
color = Color( 0.341176, 0.341176, 0.341176, 1 )

[node name="ForegroundParallax" type="ParallaxBackground" parent="."]
layer = 1

[node name="Vines" type="ParallaxLayer" parent="ForegroundParallax"]

[node name="VineTexture" type="Sprite" parent="ForegroundParallax/Vines"]
modulate = Color( 0.254902, 0.254902, 0.254902, 1 )
position = Vector2( -19, -16 )
scale = Vector2( 15, 15 )
texture = ExtResource( 11 )
centered = false
offset = Vector2( -2.377, 9.69 )

[node name="Bars" type="ParallaxLayer" parent="ForegroundParallax"]
motion_offset = Vector2( 0, 175 )
motion_mirroring = Vector2( 336, 0 )

[node name="BarTexture" type="TextureRect" parent="ForegroundParallax/Bars"]
modulate = Color( 0.286275, 0.286275, 0.286275, 1 )
margin_left = 3.0
margin_top = 1.0
margin_right = 51.0
margin_bottom = 25.0
rect_scale = Vector2( 14, 14 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="screen_entered" from="SewerPipes/SewerPipe/IfVisible" to="TileMap" method="_on_IfVisible_screen_entered"]
[connection signal="screen_exited" from="SewerPipes/SewerPipe/IfVisible" to="TileMap" method="_on_IfVisible_screen_exited"]
